--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,4 +2,15 @@ flake8==3.9.2
 mccabe==0.6.1
 pycodestyle==2.7.0
 pyflakes==2.3.1
+
+#Deps do Pytest
+py==1.10.0
+atomicwrites==1.0
+attrs==21.2.0
+six==1.16.0
+pytest==6.2.4
+pluggy==0.13.1
+
+
+
 -r requerements.txt
